small font-size fix broken on smartphones

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -135,7 +135,7 @@ p {
         font-size: 1em;
     }
     header p {
-        font-size: 0.9em;
+        font-size: 0.85em;
     }
     .polygon {
         width: 80%;
